--- a/about.html
+++ b/about.html
@@ -55,10 +55,7 @@
           an adventure if it means getting to know someone better.
         </p>
         <p>
-          There is one secret I'd like to share: I have feelings for my best
-          friend. Despite the challenges that come with these feelings, I am
-          committed to being honest with myself and those around me, and I'm
-          looking forward to seeing where life takes me next. Thank you for
+          I'm looking forward to seeing where life takes me next. Thank you for
           taking the time to learn a bit about me.
         </p>
       </main>
