--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
         <p>
           I'm looking forward to seeing where life takes me next. Thank you for
           taking the time to learn a bit about me.
+          <a href="https://ank2k04.github.io/Animated-Profile-Card/">let's connect</a>
         </p>
       </main>
 
